# openfeature-rust

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: print_eval.rs
src/: lib.rs  provider.rs
tests/: provider.rs
